src/main/metadata/objects/QC__c.object
<CustomObject>
    <description>QC: Quality Control record based on a outbound call or SSI record</description>
    <fields>
        <fullName>ADM_Comments__c</fullName>
        <label>A Deadly Mistake Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADM_DeductedReason__c</fullName>
        <inlineHelpText>1.A serious misconduct , is strictly prohibited abusive phone customers, clients and quarrel , etc.
2. Due to customer service leads to customer / brand / customer service center by significant losses</inlineHelpText>
        <label>A Deadly Mistake Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.It Is Forbidden To Quarrel...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.The Significant Loss Of...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ADeadlyMistake__c</fullName>
        <inlineHelpText>1. Abuses in phones is strictly prohibited insulting customers, fight with the customer and other serious misconduct
2. Customer service leads to significant losses on customer/brand/customer service</inlineHelpText>
        <label>A Deadly Mistake</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Comments__c</fullName>
        <label>Appeal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appeal_Creation_Date__c</fullName>
        <label>Appeal Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Finish_Date__c</fullName>
        <label>Appeal Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Response__c</fullName>
        <label>Appeal Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appeal_Result__c</fullName>
        <label>Appeal Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Status__c</fullName>
        <label>Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Added</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Type__c</fullName>
        <label>Appeal Type</label>
        <picklist>
            <picklistValues>
                <fullName>QC judge errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC change comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal fails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuzzy audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major differences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Time__c</fullName>
        <description>Used to handle batch approve QC. Chris 20131011.</description>
        <label>Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>share to Sinotrust user</description>
        <label>Approved</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CAI__c</fullName>
        <!--<inlineHelpText>Inbound, outbound:
1.Initiatives to provide relevant information or additional help;
2.Appropriate to ask the customer if they need additional help, (inbound only);
3.Answer detailed，attitude did not appear lazy,question-and-answer, love, Miss, and so on;
4.Active control, call time, hold phone calls subject.
SSI:
1.Offered to provide relevant information or additional assistance.
2.Answers to detailed, did not appear lazy attitude, question-and-answer, love, Miss, and so on.
3.Active control, call time, grasp the call topics.
4.Appropriate questions, open questions must go through repeated confirmation with the customer.</inlineHelpText>-->
        <label>Communicate Ability - Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CALA__c</fullName>
        <!--<inlineHelpText>1.Active listening, concentration, "Yes, good" customer feedback in a timely manner;
2. In the case of customers have expressed a clear, without customers and keep repeating the same information twice (not including two);
3. Answer does not appear, deviation of the understanding, and so on.</inlineHelpText>-->
        <label>Communicate Ability - Listening Ability</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CARR__c</fullName>
        <inlineHelpText>Give quick response to customer needs, without pauses for a long time, or even customers reminded to respond to clients ' profiles.</inlineHelpText>
        <label>Communicate Ability - Rapid Response</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCCR__c</fullName>
        <!--<inlineHelpText>1. Through repetition, restructure and clarify the effective organization of language, confirm with customer demand and the important basic information;
2. Accurately understanding customer intent, does not require customers to repeat;
3. Information or comment is not subjective speculation without confirmation.</inlineHelpText>-->
        <label>Clarify&amp;Confirm Customer Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCD_Comments__c</fullName>
        <label>Clarification Customer Demand Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCD_DeductedReason__c</fullName>
        <inlineHelpText>1. Did not understand the purpose customer calls.
2. Subjective judgment, comment on unconfirmed information 
3. Misleading customers.
4. Others</inlineHelpText>
        <label>Clarification Customer Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Not Understand Customer Calls...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Subjective Judgments, Comments...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Error to Guide Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CCI_Comments__c</fullName>
        <label>Collect Customer Information Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCI__c</fullName>
        <inlineHelpText>In accordance with the procedures required to collect the necessary information, such as customer information, sales information, vehicle information, such as initial source of information.</inlineHelpText>
        <label>Collect Customer Information</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CITQ__c</fullName>
        <inlineHelpText>SSI:
1. Do not mislead clients, actively verifying the customer's needs.
2. When the customer says to the topic when you don't understand, be prepared to explain the meaning.
Breathe out:
Do not mislead clients, actively verifying the customer's needs.</inlineHelpText>
        <label>Correctly Interpret The Questionnaire</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Comments__c</fullName>
        <label>Customer Perception Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CP_DeductedReason__c</fullName>
        <inlineHelpText>1. Business skills
2. Service attitude</inlineHelpText>
        <label>Customer Perception Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Business Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Attitude Towards Customers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CSR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSR Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-000179, created by Chris Huang, 20131128.</description>
        <label>CSR Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calibration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calibration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClarificationCustomerDemand__c</fullName>
        <!--<inlineHelpText>1. Retell, restructure and clarify the effective organization of language, confirm with customer demand and the important basic information, accurate understanding of customer intent
2. Information or comment is not subjective speculation without confirmation
3. Do not mislead clients, actively verifying customer needs</inlineHelpText>-->
        <label>Clarification Customer Demand</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Time__c</fullName>
        <description>Used to handle batch approve QC. Chris 20131011.</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerPerception__c</fullName>
        <!--<inlineHelpText>1.Use appropriate language and timely response to customer experience
2.Using language to appease a customer (such as complaints), customer concern, empathy
3.Don't address the issues that follow, complicated operation and not dodge in the question words
4.Do not feel free to interrupt the customer not forestall other speakers with the customer, not in a hurry to hang up the phone, showed good patience, tone is not impatient</inlineHelpText>-->
        <label>Customer Perception</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA__c</fullName>
        <!--<inlineHelpText>Inbound, outbound:
1.  Record accurate information;
2.  Match document calls substance.
SSI:
1. Accurately records the customer's answers, the document content matching call real.
2. Initiative to clarify new words, such as spelling, such as customer name, non-common.</inlineHelpText>-->
        <label>Document Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Comments__c</fullName>
        <label>Document Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_DeductedReason__c</fullName>
        <!--<inlineHelpText>IB:
1.  Typos
2. Create an information consulting
3. Create sales leads
4. Create a vehicle information
5. Information type, classification, select errors
6. The system template selection error
7. Advisory notes, other notes and calls untrue
8. other

OB:
1. Typos
2. Select the correct communication status
3. Create sales leads
4. Create a vehicle information
5. Advisory notes, other notes and calls untrue
6. other</inlineHelpText>-->
        <label>Document Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Wrong Character</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Create Information Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Choose Wrong Information Types...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Create Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Create Car Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Information Type, Classification Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Advice Note, Other Note Are...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.System Template Selection Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Advice Note, Other Note Are...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <inlineHelpText>1.Written correctly
2.Document content matching call substance
3.Work order grouped properly</inlineHelpText>
        <label>Document</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMSK__c</fullName>
        <!--<inlineHelpText>Inbound, outbound:
1.  Fully understand and master smart product price, resellers, distribution and current activities of knowledge;
2.  Full understanding of car related knowledge.
SSI:
1. Fully understand and master configuration and performance smart products price, dealer distribution.
2. Basic knowledge of car related knowledge.
3. Q5031 and Q10041 on the topic, understanding the product highlights and accurate records of customers referred to.</inlineHelpText>-->
        <label>Familiar Central/smart/ Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FQL__c</fullName>
        <!--<inlineHelpText>Breathe out:
1.Follow the logic questionnaire;
2.According to the scripts collection, or express critical information.
SSI:
1.Follow the logic questionnaire, item-by-item with your customer information, such as customer information, vehicle information, and more.
2.According to the scripts collection, or express critical information.</inlineHelpText>-->
        <label>Following Questionnaire Logic</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTOP_Comments__c</fullName>
        <label>Follow The Operation Process Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FTOP_DeductedReason__c</fullName>
        <!--<inlineHelpText>IB:
1. Advisory and upgrade process
2. Customer information process flow
3. Sales lead process
4. Active processes
5. Complaint handling process
6. SMS sending process
7. Call flow
8. Other

OB:
1. Verifying data sharing
2. Issue escalation procedures
3. SMS sending process
4. Other</inlineHelpText>-->
        <label>Follow The Operation Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Consulting And Upgrade Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Customer Information Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Sales Leads Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Campaign Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Complaint Handling Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.SMS Sending Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Call Flow Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Check Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Consulting And Upgrade Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.SMS Handling Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FTOP__c</fullName>
        <!--<inlineHelpText>Calling people：1.Activity operating procedures
2. Sales leads, business processes
3. Complaint handling process
4. General consultation processes
5.  Transfer end IVR flow 
6. Customers' willingness to share data and receive relevant information
Breathe out:
1. In the correct outbound process, using the appropriate scripts for call;
2. Special problems of process.
3. Customers ' willingness to share data and receive relevant information.
SSI：
1. according to the correct outbound process, call the script accordingly.
2. Follow a special issue dealing with the process.</inlineHelpText>-->
        <label>Follow The Operation Process</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FollowTheOperationProcess__c</fullName>
        <!--<inlineHelpText>1.Follow the existing call center operational process
2.Follow the special handling procedure
3.In accordance with the procedures required to collect the necessary information, such as customer information, sales information, vehicle information, such as initial source of information</inlineHelpText>-->
        <label>Follow The Operation Process</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAIQ_Comments__c</fullName>
        <label>Logic and Interpretation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LIOQ_DeductedReason__c</fullName>
        <inlineHelpText>1. Boot errors
2. The correct interpretation of questionnaire
3. subjective speculation/comments</inlineHelpText>
        <label>Logic and Interpretation Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.The Wrong Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Correctly Interpret The Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Subjective Speculation/Comments</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Communication_Modified_Time__c</fullName>
        <label>Last Communication Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LogicInterpretation__c</fullName>
        <inlineHelpText>1.Guiding customers to understand
2. The correct interpretation of the questionnaire
3. Information or comment is not subjective speculation without confirmation</inlineHelpText>
        <label>Logic and Interpretation Questionnaire</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OP_Comments__c</fullName>
        <label>Offline Prompt Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OP_DeductedReason__c</fullName>
        <inlineHelpText>1. Hold the line problem
2. White space appears in the phone for more than 10 seconds</inlineHelpText>
        <label>Offline Prompt Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.The Phone In The Blank...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OfflinePrompt__c</fullName>
        <inlineHelpText>1. If you need offline, need to ask customers to be patient and get approval to leave
2. Pick up the phone, waiting for the customer to expressed thanks.
3. May not exceed 30 seconds
4. Phone cannot be blank (blank length definitions: 10 seconds)</inlineHelpText>
        <label>Offline Prompt</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PACI__c</fullName>
        <inlineHelpText>1.Provide accurate and complete information on smart products
2. Provide accurate and complete information on smart activities;
3. Provide accurate and complete information on smart related (for example: PDI/on the licensing policy, etc).</inlineHelpText>
        <label>Provide Accurate&amp;Complete Information</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PFOCF__c</fullName>
        <!--<inlineHelpText>1.Use appropriate language and timely response to customer experience,Such as&quot;I understand how you feel&quot;,&quot;I understand that ...&quot;&quot;Indeed ...&quot; &quot;I'm sorry for the inconvenience&quot; tricky words;
2.Using language to appease a customer (such as complaints), customer concern, empathy.
3.Respect to customer feedback, without forcing customers to answer a questionnaire, (SSI only)</inlineHelpText>-->
        <label>Perception - Focus On Customer Feel</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHU__c</fullName>
        <inlineHelpText>Incoming call:
Transfer the exact satisfaction.
Breathe out,SSI:
Customer hung up the phone and then hang up.</inlineHelpText>
        <label>Perception - Hang Up</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>